# taigapy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  README.txt  conftest.py  install_prereqs.sh  publish_new_taigapy_pypi.sh  pyproject.toml  pyright-ratchet-errors.txt  requirements.txt  sample_client_v3.py  setup.py  static-checks  test_script.py
.github/workflows/: bump_version.yml  check_pr_title.yml  run_tests.yml  run_tests_autobump.yml  test_publish_version.yml
docs/: Definitions.md  TaigaClient API.md  readme.md  taigaclient_cli.md
taigapy/: S3UploadedFileMetadata.py  UploadFile.py  __init__.py  __init_big_bang__.py  __main__.py  client.py  client_v3.py  consts.py  custom_exceptions.py  dumb_client.py  figshare.py  format_utils.py  simple_cache.py  taiga_api.py  taiga_cache.py  taiga_client_cli.py  test_get.py  test_taiga1_get.py  test_taiga2_get.py  test_taiga2_get_canonical_id.py  test_taiga2_update_dataset.py  test_taiga_cache.py  test_taiga_client.py  test_taiga_utils.py  test_utils.py  types.py  utils.py
test_upload/: DESCRIPTION.txt  db_cl_meta.csv  db_cpd_meta.csv  db_plate_meta.csv  sparkles  test_matrix.csv
tests/: conftest.py  figshare_map_file_sample.json  test_client_v3.py  test_client_v3_against_real_service.py  test_dumb_client.py  test_preview.py  test_simple_cache.py  test_taiga_api.py  test_taiga_cache.py  test_taiga_client.py  test_taiga_client_cli.py  test_taiga_utils.py
tests/upload_files/: matrix.csv
